<resources>
    <string name="app_name">calculations_shapes</string>

    <string name="main_rectangle_width_hint">Width</string>
    <string name="main_rectangle_height_hint">Height</string>
    <string name="main_circle_radius_hint">Radius</string>
    <string name="main_triangle_base_hint">Base</string>
    <string name="main_triangle_height_hint">Height</string>
    <string name="main_calculate_text">Calculate</string>

    <string-array name="shapes">
        <item>Rectangle</item>
        <item>circle</item>
        <item>triangle</item>
    </string-array>
</resources>