<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/main_sp_shapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/shapes"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/main_et_rectangle_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/main_rectangle_width_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/main_et_rectangle_Height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/main_rectangle_height_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <EditText
        android:id="@+id/main_et_circle_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/main_circle_radius_hint"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/main_et_triangle_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/main_triangle_base_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/main_et_triangle_Height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/main_triangle_height_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/main_btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple2"
        android:text="@string/main_calculate_text"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/purple2"
        tools:ignore="TextContrastCheck"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/main_tv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple1"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />


</LinearLayout>